kubernetes/deploy/helloworld/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          #volumeMounts:
          #  - name: nfs-helloworld # name of volume should match claimName volume
          #    mountPath: /usr/share/nginx/html # mount inside of contianer
      #volumes:
      #- name: nfs-helloworld
      #  persistentVolumeClaim:
      #    claimName: pvc-helloworld
